--- a/index.html
+++ b/index.html
@@ -47,20 +47,42 @@
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-3">Welcome to the site</h1>
-              <p class="lead">This is an example website</p>
+              <p class="lead">This is an example website to improve my web skills</p>
             </div>
           </div>
         </div>
       </div>
 
     <div class="row">
-      <div class="col">
-        <div class="col-md-6">
-
+      <div class="col"></div>
+        <div class="col-sm-12 col-md-6">
+          <div id="mainCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="assets/tenisbranco.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="assets/tenispreto.jpg" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Black Sneakers</h3>
+                    <p>They're Cool</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="assets/tenisbranco2.jpg" alt="Third slide">
+              </div>
+              </div>
+              <a class="carousel-control-prev" href="#mainCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#mainCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
-        <div class="col">
-
-        </div>
+        <div class="col"></div>
       </div>
     </div>
 
