--- a/index.html
+++ b/index.html
@@ -124,14 +124,63 @@
       <div class="row">
           <div class="col-sm-12">
               <div class="coolStuffWrapper">
-                <button type="button" class="btn btn-lg coolStuffBtn">Learn now!</button>
+                <button type="button"
+                        class="btn btn-lg coolStuffBtn"
+                        data-toggle="modal"
+                        data-target="#coolStuffModal">Learn now!</button>
               </div>
           </div>
       </div>
     </div>
 
     </div>
-    </div>
+
+
+      <!-- Modal -->
+      <!-- Cool Stuff Modal -->
+      <div class="modal fade" id="coolStuffModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="contentLabel">Send us a message!</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <img class="img-fluid"src="assets/KFS_modal.png">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12">
+                  <div class="modalFormWrapper">
+                    <form>
+                        <div class="form-group">
+                          <label class="col-form-label" for="forName">What's your name?</label>
+                          <input type="text" class="form-control" id="formName" placeholder="Name">
+                        </div>
+                        <div class="form-group">
+                          <label class="col-form-label" for="formEmail">Where should we send the content?</label>
+                          <input type="text" class="form-control" id="formEmail" placeholder="Email">
+                        </div>
+                      </form>
+                  </div>
+                 </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
   </body>
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
