--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	  <link rel="stylesheet" href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap-grid.min.css" type="text/css">
 	  <link rel="stylesheet" href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css" type="text/css">
 	  <link rel="stylesheet" href="main.css" type="text/css">
-    <title></title>
+    <title>Skateboarding</title>
   </head>
   <body>
     <div class="container-fluid">
@@ -59,17 +59,17 @@
           <div id="mainCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/tenisbranco.jpg" alt="First slide">
+                <img class="d-block w-100" src="assets/board.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/tenispreto.jpg" alt="Second slide">
+                <img class="d-block w-100" src="assets/tipsolahraga.jpg" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h3>Black Sneakers</h3>
                     <p>They're Cool</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/tenisbranco2.jpg" alt="Third slide">
+                <img class="d-block w-100" src="assets/longboard.jpg" alt="Third slide">
               </div>
               </div>
               <a class="carousel-control-prev" href="#mainCarousel" role="button" data-slide="prev">
@@ -85,6 +85,7 @@
         <div class="col"></div>
       </div>
     </div>
+
     <!-- Section 2-->
     <div class="sectionDark">
       <div class="row">
@@ -133,7 +134,7 @@
       </div>
     </div>
 
-
+    <!-- Tricks Images section-->
     <div class="sectionLight">
       <div class="row">
         <div class="col-sm-12">
@@ -142,7 +143,7 @@
               <img class="img-fluid imgCenter" src="assets/kickflip.jpg" >
               <div class="row">
                 <div class="col-sm-12">
-                  <button type="button" class="btn btn-danger btn-lg btnCenter">KickFlip</button>
+                  <button type="button" class="btn btn-danger btn-lg btnCenter" data-toggle="modal" data-target=".kf-modal-lg">KickFlip</button>
                 </div>
               </div>
             </div>
@@ -150,7 +151,7 @@
               <img class="img-fluid imgCenter" src="assets/360flip.jpg" >
               <div class="row">
                 <div class="col-sm-12">
-                  <button type="button" class="btn btn-danger btn-lg btnCenter">360 Flip</button>
+                  <button type="button" class="btn btn-danger btn-lg btnCenter" data-toggle="modal" data-target=".360-modal-md">360 Flip</button>
                 </div>
               </div>
             </div>
@@ -158,7 +159,7 @@
               <img class="img-fluid imgCenter" src="assets/bscrook.jpg" >
               <div class="row">
                 <div class="col-sm-12">
-                  <button type="button" class="btn btn-danger btn-lg btnCenter">BS Crook</button>
+                  <button type="button" class="btn btn-danger btn-lg btnCenter"data-toggle="modal" data-target=".bscrook-modal-sm">BS Crook</button>
                 </div>
               </div>
             </div>
@@ -213,6 +214,41 @@
         </div>
       </div>
 
+      <!--Kickflip Modal-->
+      <div class="modal fade kf-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/UKR-trZKzfg" allowfullscreen></iframe>
+            </div>
+            <p>Irrigare: a mobile application created by Rodrigo Cabral</p>
+          </div>
+        </div>
+      </div>
+
+      <!--360 modal-->
+      <div class="modal fade 360-modal-md" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-md">
+          <div class="modal-content">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/UKR-trZKzfg" allowfullscreen></iframe>
+            </div>
+            <p>A medium modal</p>
+          </div>
+        </div>
+      </div>
+
+      <!--BS Crook-->
+      <div class="modal fade bscrook-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/UKR-trZKzfg" allowfullscreen></iframe>
+            </div>
+            <p>Another modal. Just smaller</p>
+          </div>
+        </div>
+      </div>
 
 
   </body>
