--- a/index.html
+++ b/index.html
@@ -168,6 +168,20 @@
       </div>
     </div>
 
+    <!--Footer container-->
+    <footer class="footer bg-inverse">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-lg-3">
+            <img src="assets/KFS_LIGHT.png" alt="" class="img-fluid footerImg">
+          </div>
+          <div class="col-lg-9 col-sm-12">
+
+          </div>
+        </div>
+      </div>
+    </footer>
+
     </div>
 
 
