--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 	  <link rel="stylesheet" href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap-grid.min.css" type="text/css">
 	  <link rel="stylesheet" href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	  <link rel="stylesheet" href="main.css" type="text/css">
     <title>Skateboarding</title>
   </head>
@@ -175,8 +176,11 @@
           <div class="col-sm-12 col-lg-3">
             <img src="assets/KFS_LIGHT.png" alt="" class="img-fluid footerImg">
           </div>
-          <div class="col-lg-9 col-sm-12">
-
+          <div class="col-lg-9 col-sm-12 socialWrapper">
+              <a href="https://facebook.com" target="_blank">
+              <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+              <i class="fa fa-google-plus-square fa-3x" aria-hidden="true"></i>
+              <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
           </div>
         </div>
       </div>
